chore: Ajustar e melhorar usabilidade dos menus de professor